# LibreriaRust-Faena

./: .gitignore  Cargo.toml  actualizar.cmd
.cargo/: config.toml
src/: archivos.rs  crear_sala.rs  guardado_local.rs  lib.rs  login.rs  modelo.rs  p2p.rs  p2pcon.rs  registrar.rs
